--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.invincea</groupId>
   <name>spark-hash</name>
   <description>scalable set hashing algorithms</description>
-  <version>0.1.0</version>
+  <version>0.1.1-SNAPSHOT</version>
   <url>https://github.com/mrsqueeze/spark-hash</url>
   <licenses>
     <license>
