--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.invincea</groupId>
   <name>spark-hash</name>
   <description>scalable set hashing algorithms</description>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.1.2</version>
   <url>https://github.com/mrsqueeze/spark-hash</url>
   <licenses>
     <license>
@@ -39,6 +39,16 @@
     <mavenConflictResolvers>newest,nearest</mavenConflictResolvers>
   </properties>
   <dependencies>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.1</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.1</version>
+  </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
